<resources>
    <string name="app_name">Galaksi Organik</string>
    <string name="myorder">My Order</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="header_login">Sign up below to create a secure account</string>
    <string name="descr_login"></string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <!-- Facebook login -->

    <string name="facebook_id">2757097657847712</string>
    <string name="facebook_login_protocol">fb2757097657847712</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="nama">Nama</string>
    <string name="voucher">Voucher</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    <string name="email">email</string>
    <string name="app_version">App Version 0.01</string>
    <string name="title">Title</string>
    <string name="beli">Buy</string>
    <string name="login_first">you have to login first</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, asperiores aut commodi
        consequuntur cupiditate dolorem dolorum ducimus et harum inventore labore nihil porro quas quasi quia suscipit
        tempora vero voluptates!
    </string>
    <string name="category">Category</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dikirim">Barang Anda di kirim ke</string>
    <string name="kota">kota</string>
    <string name="distrik">Distrik</string>
    <string name="date">Tanggal</string>
    <string name="checkout">CheckOut</string>
    <string name="detail_order">Detail Order</string>
    <string name="belanja_lagi">Belanja Lagi</string>
    <string name="detail_pengiriman">Detail Pengiriman</string>
    <string name="tanggal_pengiriman">Tanggal Pengiriman</string>
    <string name="area_pengiriman">Area Pengiriman</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="email_penerima">Email Penerima</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="subtotal">Subtotal</string>
    <string name="diskon">Diskon</string>
    <string name="total_harga">Total Harga</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="tanggal_pembelian">Tanggal Pembelian</string>
    <string name="distrik_pengiriman">Distrik Pengiriman</string>
    <string name="alamat_penerima">Alamat Penerima</string>
    <string name="hint_alamat">Jalan Galaxy Organic</string>
    <string name="nomor_penerima">Nomor Telepon Penerima</string>
    <string name="hint_notelp">082257704463</string>

    <!-- array menu shop -->
    <string-array name="menu_shop">
        <item>Meat</item>
        <item>Sayur</item>
        <item>Beras</item>
        <item>Jus</item>
        <item>Fish</item>
    </string-array>

    <!-- array area shipping-->
    <string-array name="area_shipping">
        <item>Malang</item>
        <item>Batu</item>
    </string-array>


</resources>
