<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.fragment.login.LoginFragment">

    <ImageView
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/length150dp"/>

    <LinearLayout
            android:padding="@dimen/length10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_marginTop="@dimen/length20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/header_login"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="@dimen/length10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/descr_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_login_facebook"
                android:text="@string/facebook"
                android:layout_marginTop="@dimen/length20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/length50dp"/>

        <Button
                android:text="@string/google"
                android:id="@+id/btn_login_google"
                android:layout_marginTop="@dimen/length5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/length50dp"/>
    </LinearLayout>
</LinearLayout>