<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.fragment.payment.CheckOutFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:textStyle="bold"
                    android:text="@string/detail_order"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_marginBottom="@dimen/length5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_detailOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <Button
                    android:background="@drawable/customborder"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorGreenSoft"
                    android:text="@string/belanja_lagi"
                    android:layout_marginTop="@dimen/length10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/length300dp"
                    android:layout_height="@dimen/length50dp"/>

            <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/length10dp"
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/detail_pengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/tanggal_pengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textColor="@color/colorGreenSoft"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/tanggal_pengiriman"
                    android:id="@+id/tv_tanggalPengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/area_pengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textColor="@color/colorGreenSoft"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/area_pengiriman"
                    android:id="@+id/tv_areaPengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/nama_penerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textColor="@color/colorGreenSoft"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/nama_penerima"
                    android:id="@+id/tv_namaPenerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/email_penerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textColor="@color/colorGreenSoft"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/email_penerima"
                    android:id="@+id/tv_emailPenerima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/length10dp"
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/ringkasan_pembayaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:paddingRight="@dimen/length10dp"
                    android:textAlignment="viewEnd"
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/subtotal"
                    android:id="@+id/tv_subtotal"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/diskon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textStyle="bold"
                    android:paddingRight="@dimen/length10dp"
                    android:textAlignment="viewEnd"
                    android:layout_marginBottom="@dimen/length5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/diskon"
                    android:id="@+id/tv_diskon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:text="@string/total_harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:paddingRight="@dimen/length10dp"
                    android:textAlignment="viewEnd"
                    android:layout_marginBottom="@dimen/length5dp"
                    android:text="@string/total_harga"
                    android:id="@+id/tv_totalHarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/pembayaran"
                    android:layout_marginTop="@dimen/length20dp"
                    android:layout_marginBottom="@dimen/length20dp"
                    android:background="@color/colorGreenSoft"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length40dp"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>