<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.activity.shop.DetailItemShopActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/imgv_detailBarang"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length200dp"/>

            <RelativeLayout
                    android:padding="@dimen/length10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:textColor="@color/colorGreenSoft"
                        android:layout_marginTop="@dimen/length10dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:text="@string/nama_barang"
                        android:id="@+id/tv_namaBarang_detailBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tv_hargaBarang_detailBarang"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_marginTop="@dimen/length5dp"
                        android:textStyle="bold"
                        android:text="@string/harga_barang"
                        android:layout_below="@id/tv_namaBarang_detailBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tv_category_detailBarang"
                        android:padding="@dimen/length10dp"
                        android:background="@color/colorDarkGrey"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:text="@string/category"
                        android:layout_marginTop="@dimen/length20dp"
                        android:layout_below="@id/tv_hargaBarang_detailBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:id="@+id/tv_desc_detailBarang"
                        android:text="@string/lorem"
                        android:layout_marginTop="@dimen/length20dp"
                        android:layout_below="@id/tv_category_detailBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>