<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorGrey"
              tools:context=".ui.fragment.account.AccountFragment">

    <android.support.v7.widget.CardView
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            app:cardCornerRadius="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:padding="@dimen/length10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:background="@color/colorAccent"
                        android:id="@+id/imgv_profile_account"
                        android:layout_width="@dimen/length100dp"
                        android:layout_height="@dimen/length100dp"/>

                <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/length20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/tv_nama_account"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:text="@string/nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:id="@+id/tv_email_account"
                            android:layout_marginTop="@dimen/length5dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                    android:drawableRight="@drawable/ic_keyboard_arrow_right"
                    android:paddingLeft="@dimen/length5dp"
                    android:paddingRight="@dimen/length5dp"
                    android:text="@string/voucher"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="@dimen/length20dp"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length50dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/length10dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:padding="@dimen/length10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:id="@+id/btn_privacyPolicy_account"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right"
                    android:paddingLeft="@dimen/length5dp"
                    android:paddingRight="@dimen/length5dp"
                    android:textAlignment="viewStart"
                    android:text="@string/privacy_and_policy"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length50dp"/>
            <Button
                    android:id="@+id/btn_help_account"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right"
                    android:paddingLeft="@dimen/length5dp"
                    android:paddingRight="@dimen/length5dp"
                    android:textAlignment="viewStart"
                    android:text="@string/help"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length50dp"/>
            <Button
                    android:id="@+id/btn_logout_account"
                    android:textColor="@color/colorAccent"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right"
                    android:paddingLeft="@dimen/length5dp"
                    android:paddingRight="@dimen/length5dp"
                    android:textAlignment="viewStart"
                    android:text="@string/logout"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length50dp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>