<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.fragment.login.LoginFragment">

    <ImageView
            android:src="@drawable/logogalaksiorganik"
            android:layout_marginTop="@dimen/length50dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="@dimen/length150dp"/>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:padding="@dimen/length10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_marginTop="@dimen/length20dp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    android:text="@string/header_login"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <FrameLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                        android:visibility="invisible"
                        android:id="@+id/login_button_facebook_activity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                <Button
                        android:id="@+id/btn_login_facebook_activity"
                        android:paddingLeft="@dimen/length5dp"
                        android:drawableLeft="@drawable/icon_facebook"
                        android:background="@color/colorBlue"
                        android:layout_width="match_parent"
                        android:text="@string/facebook"
                        android:textStyle="bold"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorWhite"
                        android:paddingRight="@dimen/length5dp"
                        android:layout_height="@dimen/length40dp"/>

            </FrameLayout>


            <Button
                    android:paddingRight="@dimen/length5dp"
                    android:paddingLeft="@dimen/length5dp"
                    android:drawableLeft="@drawable/icon_google"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:background="@color/colorRed"
                    android:textColor="@color/colorWhite"
                    android:text="@string/google"
                    android:id="@+id/btn_login_google_activity"
                    android:layout_marginTop="@dimen/length5dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/length40dp"/>

            <TextView
                    android:layout_marginTop="@dimen/length5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>